<resources>
    <string name="app_name">Condo360</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_finances">Finances</string>
    <string name="menu_properties">Properties</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_logout">Log Out</string>
</resources>